tests/let_const/const.js
/* TODO: function singleAssignment() {
  const foo = "foo"
  foo = "bar" // error
} */

/* TODO: function singleDeclaration() {
  const foo = "foo"
  const foo = "bar" // error
} */

function requiresInitializer() {
  const foo; // error
}
